--- a/client/app/index.tmpl.html
+++ b/client/app/index.tmpl.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>React + Redux + Webpack</title>
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
   </head>
   <body>
     <div id='root'>
